 27-Apr-2020  V0.979 Adjustments for remediated carbohydrate data files, leave BIRD_* annotations solely in definition collections.
 30-Apr-2020  V0.980 New NMR repo holdings content types, specific configuration option added for ed maps list
  2-May-2020  V0.981 Restore out-of-sync repository holdings data processing module and update related tests
  8-May-2020  V0.982 Adding support for context_attribute_values and search path schema extensions.
 13-May-2020  V0.983 Adjustments to suppress materialization of an assembly of deposited coordinates
 15-May-2020  V0.984 Adjustments to suppress logging of missing assembly data
 16-May-2020  V0.985 Adding test case for branched entity replace test
 18-May-2020  V0.986 More complete object purge for loadType replace, explicitly filter heavy atoms in counting stats.
 19-May-2020  V0.987 Reduce verbose logging of memory usage and use alternative $regex filter for mongo purging
 21-May-2020  V0.988 Added additional methods to export search group and context statistics
 22-May-2020  V0.989 Adding auth to entity polymer sequence residue mapping item.
  3-Jun-2020  V0.990 Updating dependencies for rcsb.utils.validation and validation test conditions.
  4-Jun-2020  V0.991 Adding new flag for prerelease sequence availability
  5-Jun-2020  V0.992 Adding support for new enum DDL attributes.
 12-Jun-2020  V0.993 Adjustments to the labeling of site, occupancy and oberserved features
 17-Jun-2020  V0.994 Adjustments rcsb_repository_holdings_unreleased_entry collection
 18-Jun-2020  V0.995 Adding entity taxonomy count.
 25-Jun-2020  V0.996 Adding schema validation to automatically follow on from any load failures in mongo/PdbxLoader()
 25-Jun-2020  V0.997 Update dependencies
 30-Jun-2020  V0.998 Add partial reload of failed object salvage path
 10-Jul-2020  V0.999 Adding support for derivative branched entity methods
 15-Jul-2020  V1.001 Adding methods to export water counting statistics.