@@ -254,3 +254,4 @@
  30-Jun-2020  V0.998 Add partial reload of failed object salvage path
  10-Jul-2020  V0.999 Adding support for derivative branched entity methods
  15-Jul-2020  V1.001 Adding methods to export water counting statistics.
+ 28-Jul-2020  V1.002 Add stash server config options to example configuration file
